add new page and markdown plugin sitemap

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.2.1",
+    "@astropub/md": "^1.0.0",
     "astro": "^5.0.5",
     "sass-embedded": "^1.82.0"
   }
